# python-starter-template

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
scripts/: lint.sh
tests/: test_example.py
